Change codeowners to all dissemination

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,4 +2,4 @@
 
 # The below indicates the code owners of this repo without auto-assigning PRs to the team
 
-.github/* @ONSdigital/dissemination-open-sauce @ONSdigital/dissemination-platform @ONSdigital/dissemination-cms
+.github/* @ONSdigital/dissemination
